Added nav bars and two functions are created in views.

--- a/Vyomika/templates/Home/index.html
+++ b/Vyomika/templates/Home/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vyomika</title>
-</head>
-<body>
-    <img src="{{plot_path}}" alt="Bar">
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %} Vyomika {% endblock title %}
+
+{% block body %}
+<img src="{{plot_path}}" alt="Bar">
+{% endblock %}
