Changed containers and Added app to settings.

--- a/Vyomika/templates/Home/index.html
+++ b/Vyomika/templates/Home/index.html
@@ -3,5 +3,8 @@
 {% block title %} Vyomika {% endblock title %}
 
 {% block body %}
-<img src="{{plot_path}}" alt="Bar">
+<div class="container">
+    <h1>Bar Graphs</h1>
+    <img src="{{plot_path}}" alt="">
+</div>
 {% endblock %}
