Made about page. Dropdown is placed in center.

--- a/Vyomika/templates/Home/about.html
+++ b/Vyomika/templates/Home/about.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %} Vyomika {% endblock title %}
-{% block homeactive %} active {% endblock homeactive %}
+{% block aboutactive %} active {% endblock aboutactive %}
 {% block body %}
 <div class="container">
-    <h1>Bar Graphs</h1>
-    <img src="{{plot_path}}" alt="">
+    <h1>About Page!</h1>
 </div>
 {% endblock %}
