--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -23,13 +23,16 @@
                     style="justify-content: center; font-size: large;">
                     <ul class="nav nav-underline">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link {% block homeactive %}  {% endblock homeactive %}" aria-current="page"
+                                href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link {% block aboutactive %}  {% endblock aboutactive %}" href="/about">About
+                                Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link {% block contactactive %}  {% endblock contactactive %}"
+                                href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +41,8 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu" style="left: 50% !important;
+                    transform: translateX(-50%);">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -49,9 +53,10 @@
                     </ul>
                 </div>
 
+
             </div>
         </nav>
-        <div class="col-md-12" style="width: 12%; float: right;">
+        <div class="col-md-12 my-2" style="width: 12%; float: right;">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </div>
         {% block body %}
