--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -43,13 +43,12 @@
                     </button>
                     <ul class="dropdown-menu" style="left: 50% !important;
                     transform: translateX(-50%);">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Attendance System</a></li>
+                        <li><a class="dropdown-item" href="#">Visualize</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        <li><a class="dropdown-item" href="#">Sign Out</a></li>
                     </ul>
                 </div>
 
