changed some features.

--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -44,7 +44,7 @@
                     <ul class="dropdown-menu" style="left: 50% !important;
                     transform: translateX(-50%);">
                         <li><a class="dropdown-item" href="#">Attendance System</a></li>
-                        <li><a class="dropdown-item" href="#">Visualize</a></li>
+                        <li><a class="dropdown-item" href="/visualize">Visualize</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
