--- a/Vyomika/templates/Visualize/data.html
+++ b/Vyomika/templates/Visualize/data.html
@@ -3,6 +3,28 @@
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
 <div class="container">
-    
+    <div class="container my-3">
+        <h3>Contact iCoder Admin</h3>
+        <form action="#" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" name="name" aria-describedby="name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="xlabels">Enter the xlabels</label>
+                <input type="text" class="form-control" id="xlabel" name="names" placeholder="Separated by comma" required>
+            </div>
+
+            <div class="form-group">
+                <label for="ylabels">Enter the ylabels </label>
+                <input type="text" class="form-control" id="ylabel" name="data" placeholder="Separated by Comma" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary m-2" href='/display' >Submit</button>
+
+        </form>
+    </div>
 </div>
 {% endblock %}
