--- a/Vyomika/templates/Visualize/data.html
+++ b/Vyomika/templates/Visualize/data.html
@@ -5,8 +5,7 @@
 <div class="container">
     <div class="container my-3">
         <h3>Contact iCoder Admin</h3>
-        <form action="#" method="post">
-            {% csrf_token %}
+        <form action="#" method="post">{% csrf_token %}
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" name="name" aria-describedby="name" required>
