--- a/Vyomika/templates/Visualize/visualize.html
+++ b/Vyomika/templates/Visualize/visualize.html
@@ -2,13 +2,18 @@
 
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
-<h3>Graph Display</h3>
-{% if data %}
-<div>
-    <p>Name: {{ data.fname }}</p>
-    <p>Data: {{ data.datas }}</p>
-    <p>Names: {{ data.names }}</p>
+<div class="container">    
+    <h3>Graph Display</h3>
+    {% if data %}
+    <div>
+        <p>Name: {{ data.fname }}</p>
+        <p>Data: {{ data.datas }}</p>
+        <p>Names: {{ data.names }}</p>
+    </div>
+    <img src="{{url}}" alt="Graph {{data.snum}}">
+    {% endif %}
 </div>
-<img src="/Vyomika/media/graph4.png" alt="Graph Image">
-{% endif %}
 {% endblock %}
+
+
+{% comment %} {{ MEDIA_URL }}graph{{data.snum}}.png {% endcomment %}
