Changed pictures in management and added footer.

--- a/Vyomika/templates/Student/home.html
+++ b/Vyomika/templates/Student/home.html
@@ -10,8 +10,11 @@
             <div class="card h-100">
                 <img src="{% static 'studentmgmt.png' %}" class="card-img-top" alt="Thumbnail">
                 <div class="card-body">
-                    <h5 class="card-title">Post 1 Title</h5>
-                    <p class="card-text">Content for post 1</p>
+                    <h2 class="card-title">Student Management</h2>
+                    <p class="card-text">A student management system is a software application designed to manage
+                        various aspects of student information within an educational institution. It provides a
+                        centralized platform for administrators, teachers, and staff to efficiently handle student data
+                        and streamline administrative tasks. </p>
                     <a href="/blog/post-1" class="btn btn-primary">Analyze</a>
                 </div>
             </div>
@@ -19,20 +22,28 @@
 
         <div class="col-md-4 mb-4">
             <div class="card h-100">
-                <img src="{% static 'studentmgmt.png' %}" class="card-img-top" alt="Thumbnail">
+                <img src="{% static 'staff.png' %}" class="card-img-top" alt="Thumbnail" style="height: 35.8%;">
                 <div class="card-body">
-                    <h5 class="card-title">Post 2 Title</h5>
-                    <p class="card-text">Content for post 2</p>
+                    <h2 class="card-title">Staff Management</h2>
+                    <p class="card-text">A staff management system is a software application designed to handle various
+                        aspects of employee information within an organization. It provides a centralized platform for
+                        administrators and HR personnel to manage employee data, track attendance, assign tasks, and
+                        streamline administrative tasks related to staff management.</p>
                     <a href="/blog/post-2" class="btn btn-primary">Analyze</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
             <div class="card h-100">
-                <img src="{% static 'studentmgmt.png' %}" class="card-img-top" alt="Thumbnail">
+                <img src="{% static 'viz.png' %}" class="card-img-top" alt="Thumbnail" style="height: 36%;">
                 <div class="card-body">
-                    <h5 class="card-title">Post 3 Title</h5>
-                    <p class="card-text">Content for post 3</p>
+                    <h2 class="card-title">Visualization</h2>
+                    <p class="card-text">Data visualization is the process of presenting data in a graphical or visual
+                        format to facilitate understanding and analysis. It enables individuals and organizations to
+                        explore and interpret complex datasets more effectively. By transforming raw data into visually
+                        appealing charts, graphs, maps, or interactive dashboards, data visualization simplifies the
+                        communication of information, patterns, and insights. It allows users to identify trends,
+                        patterns, and correlations, leading to informed decision-making and actionable insights. </p>
                     <a href="/blog/post-3" class="btn btn-primary">Analyze</a>
                 </div>
             </div>
