--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -13,14 +13,14 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-                <a class="navbar-brand" href="#">VYOMIKA</a>
+                <a class="navbar-brand" href="/">VYOMIKA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                    style="justify-content: center; font-size: large;">
+                    style="justify-content: center; font-size: larger;">
                     <ul class="nav nav-underline">
                         <li class="nav-item">
                             <a class="nav-link {% block homeactive %}  {% endblock homeactive %}" aria-current="page"
@@ -61,6 +61,50 @@
         {% block body %}
 
         {% endblock %}
+
+
+        <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
+            <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+                <div class="row">
+                    <div class="col-lg-3 mb-3">
+                        <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none"
+                            href="/" aria-label="Bootstrap">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2"
+                                viewBox="0 0 118 94" role="img">
+                                <title>VYOMIKA</title>
+                            </svg>
+                            <span class="fs-5">VYOMIKA</span>
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a href="/">Home</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-lg-2 mb-3">
+                        <h5>Guides</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-lg-2 mb-3">
+                        <h5>Projects</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap">Bootstrap 5</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-lg-2 mb-3">
+                        <h5>Community</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues">Issues</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
