--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} {% endblock %}</title>
+    <style>{% block style%} {% endblock %}</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -20,19 +21,19 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                    style="justify-content: center; font-size: larger;">
+                    style="justify-content: center; font-size: larger">
                     <ul class="nav nav-underline">
                         <li class="nav-item">
                             <a class="nav-link {% block homeactive %}  {% endblock homeactive %}" aria-current="page"
-                                href="/">Home</a>
+                                href="/" style="color: rgba(0, 0, 0, 0.742);">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% block aboutactive %}  {% endblock aboutactive %}" href="/about">About
+                            <a class="nav-link {% block aboutactive %}  {% endblock aboutactive %}" href="/about" style="color: rgba(0, 0, 0, 0.742);">About
                                 Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block contactactive %}  {% endblock contactactive %}"
-                                href="#">Contact</a>
+                                href="#" style="color: rgba(0, 0, 0, 0.742);">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +64,7 @@
         {% endblock %}
 
 
-        <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
+        <footer class="bd-footer py-4 py-md-1 mt-5 bg-body-tertiary">
             <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
                 <div class="row">
                     <div class="col-lg-3 mb-3">
