Made Header and Footer changes in Contact page.

--- a/Vyomika/templates/Home/contact.html
+++ b/Vyomika/templates/Home/contact.html
@@ -2,11 +2,6 @@
 
 {% block title %} ContactVyomika {% endblock title %}
 {% block style%} 
-svg {
-	height: 23rem;
-	margin-right: 4rem;
-}
-
 #envelope {
   animation: float 2s ease-in-out infinite;
 }
@@ -42,10 +37,6 @@ svg {
   100% {
     opacity: 1;
   }
-}
-
-.container {
-	height: 100vh;
 }
 
 form {
@@ -426,10 +417,10 @@ form {
 
 	
 	<form>
-		<h1 class="title text-center mb-4">Talk to Us</h1>
+		<h1 class="title text-center mb-4">Contact Us</h1>
 
 			<!-- Name -->
-			<div class="form-group position-relative">
+			<div class="form-group position-relative my-2">
 				<label for="formName" class="d-block">
 					<i class="icon" data-feather="user"></i>
 				</label>
@@ -437,7 +428,7 @@ form {
 			</div>
 
 			<!-- E-mail -->
-			<div class="form-group position-relative">
+			<div class="form-group position-relative my-2">
 				<label for="formEmail" class="d-block">
 					<i class="icon" data-feather="mail"></i>
 				</label>
@@ -445,12 +436,12 @@ form {
 			</div>
 
 			<!-- Message -->
-			<div class="form-group message">
-				<textarea id="formMessage" class="form-control form-control-lg" rows="7" placeholder="Mensagem"></textarea>
+			<div class="form-group message my-2">
+				<textarea id="formMessage" class="form-control form-control-lg" rows="7" placeholder="Write a message"></textarea>
 			</div>
 		
 			<!-- Submit btn -->
-			<div class="text-center">
+			<div class="text-center my-2">
 				<button type="submit" class="btn btn-primary" tabIndex="-1">Send message</button>
 			</div>
 	</form>
