--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -33,7 +33,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block contactactive %}  {% endblock contactactive %}"
-                                href="#" style="color: rgba(0, 0, 0, 0.742);">Contact</a>
+                                href="/contact" style="color: rgba(0, 0, 0, 0.742);">Contact</a>
                         </li>
                     </ul>
                 </div>
