--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -6,47 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} {% endblock %}</title>
     <style>
-        {% block style %} {% endblock %}
+        {
+            % block style %
+        }
+
+            {
+            % endblock %
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container">
-                <a class="navbar-brand" href="/">VYOMIKA</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                    style="justify-content: center; font-size: larger">
-                    <ul class="nav nav-underline">
-                        <li class="nav-item">
-                            <a class="nav-link {% block homeactive %}  {% endblock homeactive %}" aria-current="page"
-                                href="/" style="color: rgba(0, 0, 0, 0.742);">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% block aboutactive %}  {% endblock aboutactive %}" href="/about"
-                                style="color: rgba(0, 0, 0, 0.742);">About
-                                Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% block contactactive %}  {% endblock contactactive %}" href="/contact"
-                                style="color: rgba(0, 0, 0, 0.742);">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+    {% load static %}
+    
+        <div class="container">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
+                    <button type="button" class="btn btn-light dropdown-toggle-split"
                         data-bs-toggle="dropdown" aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                          </svg>
                         <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" style="left: 50% !important;
-                    transform: translateX(-50%);">
+                transform: translateX(-50%);">
                         <li><a class="dropdown-item" href="/management/">Student Management System</a></li>
                         <li><a class="dropdown-item" href="/visualize/post/">Visualize</a></li>
                         <li>
@@ -55,81 +41,108 @@
                         <li><a class="dropdown-item" href="#">Sign Out</a></li>
                     </ul>
                 </div>
-
-
+                <div class="container">
+                    <a class="navbar-brand" href="/"><img src="{% static 'logo.png' %}" alt="logo" style="height: 6em;"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent"
+                        style="justify-content:center; font-size: large">
+                        <ul class="nav nav-underline">
+                            <li class="nav-item">
+                                <a class="nav-link {% block homeactive %}  {% endblock homeactive %}"
+                                    aria-current="page" href="/" style="color: rgba(0, 0, 0, 0.742);">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% block aboutactive %}  {% endblock aboutactive %}" href="/about"
+                                    style="color: rgba(0, 0, 0, 0.742);">About
+                                    Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% block contactactive %}  {% endblock contactactive %}"
+                                    href="/contact" style="color: rgba(0, 0, 0, 0.742);">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                        <div class="d-grid gap-2" style="float: right;">
+                            <button class="btn btn-primary " type="button">Login</button>
+                        </div>
+                </div>
+            </nav>
+            <div class="col-md-12 my-2 d-flex justify-content-end">
+                <button class="btn btn-outline-success" type="submit">Search</button>
             </div>
-        </nav>
-        <div class="col-md-12 my-2 d-flex justify-content-end">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </div>
 
-        {% for message in messages %}
-        <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
-            <strong>Message: </strong> {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        {% endfor %}
+            {% for message in messages %}
+            <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+                <strong>Message: </strong> {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% endfor %}
 
-        {% block body %}
+            {% block body %}
 
-        {% endblock %}
+            {% endblock %}
 
 
-        <footer class="bd-footer py-4 py-md-1 mt-5 bg-body-tertiary">
-            <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-                <div class="row">
-                    <div class="col-lg-3 mb-3">
-                        <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none"
-                            href="/" aria-label="Bootstrap">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2"
-                                viewBox="0 0 118 94" role="img">
-                                <title>VYOMIKA</title>
-                            </svg>
-                            <span class="fs-5">VYOMIKA</span>
-                        </a>
-                    </div>
-                    <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-                        <h5>Links</h5>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a href="/">Home</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-lg-2 mb-3">
-                        <h5>Guides</h5>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-lg-2 mb-3">
-                        <h5>Projects</h5>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap">Bootstrap 5</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-lg-2 mb-3">
-                        <h5>Community</h5>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues">Issues</a></li>
-                        </ul>
+            <footer class="bd-footer py-4 py-md-1 mt-5 bg-body-tertiary">
+                <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+                    <div class="row">
+                        <div class="col-lg-3 mb-3">
+                            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none"
+                                href="/" aria-label="Bootstrap">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="d-block me-2"
+                                    viewBox="0 0 118 94" role="img">
+                                    <title>VYOMIKA</title>
+                                </svg>
+                                <span class="fs-5">VYOMIKA</span>
+                            </a>
+                        </div>
+                        <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+                            <h5>Links</h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><a href="/">Home</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-lg-2 mb-3">
+                            <h5>Guides</h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-lg-2 mb-3">
+                            <h5>Projects</h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><a href="https://github.com/twbs/bootstrap">Bootstrap 5</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-lg-2 mb-3">
+                            <h5>Community</h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues">Issues</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+                crossorigin="anonymous"></script>
+        </div>
     </div>
 </body>
 
