--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -6,13 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} {% endblock %}</title>
     <style>
-        {
-            % block style %
-        }
+        {% block style %}
 
-            {
-            % endblock %
-        }
+            {% endblock %}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -22,57 +18,81 @@
     {% load static %}
     
         <div class="container">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary" style="height: 4.5em;">
                 <div class="btn-group">
-                    <button type="button" class="btn btn-light dropdown-toggle-split"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                          </svg>
+                    <button type="button" class="btn btn-light dropdown-toggle-split" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu" aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+                            viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                        </svg>
                         <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
-                    <ul class="dropdown-menu" style="left: 50% !important;
-                transform: translateX(-50%);">
-                        <li><a class="dropdown-item" href="/management/">Student Management System</a></li>
-                        <li><a class="dropdown-item" href="/visualize/post/">Visualize</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Sign Out</a></li>
-                    </ul>
                 </div>
                 <div class="container">
-                    <a class="navbar-brand" href="/"><img src="{% static 'logo.png' %}" alt="logo" style="height: 6em;"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="/"><img src="{% static 'vlogo.png' %}" alt="logo"
+                            style="height: 5em; margin: -2em;"> YOMIKA</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent"
                         style="justify-content:center; font-size: large">
                         <ul class="nav nav-underline">
                             <li class="nav-item">
-                                <a class="nav-link {% block homeactive %}  {% endblock homeactive %}"
-                                    aria-current="page" href="/" style="color: rgba(0, 0, 0, 0.742);">Home</a>
+                                <a class="nav-link {% block homeactive %}  {% endblock homeactive %}" aria-current="page" href="/"
+                                    style="color: rgba(0, 0, 0, 0.742);">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {% block aboutactive %}  {% endblock aboutactive %}" href="/about"
-                                    style="color: rgba(0, 0, 0, 0.742);">About
-                                    Us</a>
+                                    style="color: rgba(0, 0, 0, 0.742);">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {% block contactactive %}  {% endblock contactactive %}"
-                                    href="/contact" style="color: rgba(0, 0, 0, 0.742);">Contact</a>
+                                <a class="nav-link {% block contactactive %}  {% endblock contactactive %}" href="/contact"
+                                    style="color: rgba(0, 0, 0, 0.742);">Contact</a>
                             </li>
                         </ul>
                     </div>
-                        <div class="d-grid gap-2" style="float: right;">
-                            <button class="btn btn-primary " type="button">Login</button>
-                        </div>
+                    <div class="d-grid gap-2" style="float: right;">
+                        <button class="btn btn-primary " type="button">Login</button>
+                    </div>
                 </div>
             </nav>
+            
+            <!-- Offcanvas menu -->
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasMenuLabel">Menu</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/management/">Student Management System</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/visualize/post/">Visualize</a>
+                        </li>
+                        <li class="nav-item">
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sign Out</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
             <div class="col-md-12 my-2 d-flex justify-content-end">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <form  action="#" method="POST" class="form" style="position: initial;">
+                    {% csrf_token %}
+                    <input class="mr-sm-3" type="search" placeholder="Search" aria-label="Search" style="border-radius: 5px; height: 2.1em;">
+                    <button class="btn btn-outline-none my-2 my-sm-0" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg></button>
+                </form>
             </div>
 
             {% for message in messages %}
