Made a landing page for student management.

--- a/Vyomika/templates/Home/index.html
+++ b/Vyomika/templates/Home/index.html
@@ -100,7 +100,7 @@ ul {
             <div class="info">
               <h1>Looking For Inspiration</h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus odit nihil ullam nesciunt quidem iste, Repellendus odit nihil</p>
-              <button>Button name</button>
+              <button>Get Started</button>
             </div>
             <div class="image">
               <img src="{% static 'logo1.png' %}" alt='Logo' style="height:fit-content;">
