--- a/Vyomika/templates/Student/home.html
+++ b/Vyomika/templates/Student/home.html
@@ -15,7 +15,7 @@
                         various aspects of student information within an educational institution. It provides a
                         centralized platform for administrators, teachers, and staff to efficiently handle student data
                         and streamline administrative tasks. </p>
-                    <a href="/blog/post-1" class="btn btn-primary">Analyze</a>
+                    <a href="faculty/" class="btn btn-primary">Analyze</a>
                 </div>
             </div>
         </div>
