--- a/Vyomika/templates/Visualize/visualize.html
+++ b/Vyomika/templates/Visualize/visualize.html
@@ -10,7 +10,7 @@
         <p>Data: {{ data.datas }}</p>
         <p>Names: {{ data.names }}</p>
     </div>
-    <img src="{{url}}" alt="Graph {{data.snum}}">
+    <img src="/media/graph{{data.snum}}.png" alt="Graph {{data.snum}}">
     {% endif %}
 </div>
 {% endblock %}
